summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: not found: value pickUpBaggle
def pickbaggle() {pickUpBaggle(); retraite(); forward(); dropBaggle};
                  ^