summative.moria.Moria.scala.code
while (getGroundColor()!=Color.GREEN) 
{def fonce() {while (!isOverBaggle) {forward()}}
def retraite() {while (!isOverBaggle) {backward()}}            
def pickbaggle() {pickUpBaggle(); retraite(); forward(); dropBaggle};
fonce(); pickbaggle()}